platform/longhorn/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
  hostnames:
    - longhorn.192.168.1.27.nip.io
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
